fix: edit loading styles to be visible on loading list

--- a/src/ui-components/loading/loading.style.scss
+++ b/src/ui-components/loading/loading.style.scss
@@ -3,7 +3,7 @@
 .loading-background {
   width: 100%;
   height: 100vh;
-  z-index: 998;
+  z-index: 997;
   background-color: #000;
   top: 0;
 
@@ -45,7 +45,6 @@
   .loading-wrapper--loading-body {
     width: 100px;
     height: 70px;
-    top: 35%;
     color: #000;
     border-radius: $mediumSize;
     background-color: #fff;
